--- a/src/index.css
+++ b/src/index.css
@@ -82,8 +82,10 @@ code {
     height: 10em;
     vertical-align: middle;
 }
+
 .profile .icon {
 }
+
 .profile:hover {
     cursor: pointer;
     border-width: 2px;
@@ -123,8 +125,9 @@ nav.path {
     color: #efefef;
 }
 
-.file-item:hover, .file-item.selected {
+.file-item:hover, .file-item.selected, .file-item:focus {
     background: #464e54;
+    outline: 0 none;
 }
 
 .file-item figure {
@@ -231,6 +234,17 @@ nav.path {
     text-align: center;
     width: 100%;
     height: 100%;
+}
+
+.current-file .viewer > a {
+    text-decoration: none;
+    color: #efefef;
+    cursor: default;
+}
+
+.current-file .viewer > a:focus {
+    border: none;
+    outline: 0 none;
 }
 
 .current-file .viewer .navi {
